--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -9,15 +7,15 @@ body {
   
   header {
     background-color: wine;
-    color: white;
+    color: ghostwhite;
     padding: 1rem;
     text-align: center;
   }
   
   nav ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
   }
   
   nav li {
@@ -32,7 +30,7 @@ body {
   
   main section {
     padding: 2rem;
-    background-color: white;
+    background-color: #ccc;
     margin: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -42,6 +40,6 @@ body {
     text-align: center;
     padding: 1rem;
     background-color: wine;
-    color: white;
+    color: black;
   }
   
